overflow and position have been edited, mobile responsive errors have been fixed.

--- a/style.css
+++ b/style.css
@@ -132,9 +132,7 @@ font-family: 'Barlow Condensed', sans-serif;
     justify-content: space-between;
     align-items: end;
 }
-/* .crew{
-margin-bottom: 20px;
-} */
+
 /* Crew Carousel */
   .buttonCarousel {
     width: 13px;
